# TokenWars

./: .env.example  .gitignore  README.md  app.js  charts.css  charts.js  competition.js  docker-compose.yml  how-it-works.html  index.html  package.json  portfolio-integration.js  roadmap.txt  styles.css  supabase-client.js  user.js  utils.js
admin/: admin.css  admin.html  admin.js  auth.js
api/: debug-supabase.js  test-env.js
api/admin/auth/: verify.js
backend/: admin-api.js  auth.js  betting.js  competitions.js  database.js  package.json  server.js  tokens.js  utils.js
database/: admin-setup.sql  database-schema.sql  schema.sql  supabase-setup.js  test-data.sql  token-schema.sql
docs/: app.js  charts.css  charts.js  competition-manager.js  competition.js  config.js  enhanced-ui.css  how-it-works.html  index.html  portfolio-integration.js  price-service.js  smart-contract-service.js  styles.css  supabase-client.js  token-service.js  user.js  utils.js  wallet-service.js
docs/admin/: admin.css  admin.html  admin.js  auth.js
docs/admin/components/: blacklist-manager.js  cache-monitor.js  pair-optimizer.js  token-approval.js
frontend/: app.js  competition.js  config.js  index.html  styles.css  supabase-client.js  user.js  utils.js
scripts/: setup.js
shared/: config.js  supabase.js  supabase.js.js  types.js
smart-contracts/: Anchor.toml
smart-contracts/programs/token-betting/: Cargo.toml
smart-contracts/programs/token-betting/src/: errors.rs  lib.rs  state.rs
supabase/: config.toml
tests/: backend.test.js  frontend.test.js  smart-contract.test.js
(+6 files in other folders)
